// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.parsers.orders.list-order-items-response should parse the ListOrderItemsByNextTokenResponse example response from MWS doc 1`] = `
{
  "listOrderItemsResult": {
    "amazonOrderId": "058-1233752-8214740",
    "nextToken": "MRgZW55IGNhcm5hbCBwbGVhc3VyZS6=",
    "orderItems": [
      {
        "asin": "BT0093TELA",
        "buyerCustomizedInfo": null,
        "codFee": {
          "amount": 10,
          "currencyCode": "USD",
        },
        "codFeeDiscount": {
          "amount": 1,
          "currencyCode": "USD",
        },
        "conditionId": null,
        "conditionNote": null,
        "conditionSubtypeId": null,
        "giftMessageText": "For you!",
        "giftWrapLevel": "Classic",
        "giftWrapPrice": {
          "amount": 1.99,
          "currencyCode": "USD",
        },
        "giftWrapTax": null,
        "isGift": false,
        "isTransparency": null,
        "itemPrice": {
          "amount": 25.99,
          "currencyCode": "USD",
        },
        "itemTax": null,
        "orderItemId": "68828574383266",
        "pointsGranted": null,
        "priceDesignation": "BusinessPrice",
        "productInfo": null,
        "promotionDiscount": null,
        "promotionDiscountTax": null,
        "promotionIds": [],
        "quantityOrdered": 1,
        "quantityShipped": 1,
        "scheduledDeliveryEndDate": Date { NaN },
        "scheduledDeliveryStartDate": 2013-09-06T08:00:00.000Z,
        "sellerSKU": "CBA_OTF_1",
        "serialNumberRequired": null,
        "shippingDiscount": null,
        "shippingDiscountTax": null,
        "shippingPrice": {
          "amount": 1.26,
          "currencyCode": "USD",
        },
        "shippingTax": null,
        "taxCollection": null,
        "title": "Example item name",
      },
      {
        "asin": "BCTU1104UEFB",
        "buyerCustomizedInfo": null,
        "codFee": null,
        "codFeeDiscount": null,
        "conditionId": "Used",
        "conditionNote": "Example ConditionNote",
        "conditionSubtypeId": "Mint",
        "giftMessageText": null,
        "giftWrapLevel": null,
        "giftWrapPrice": null,
        "giftWrapTax": null,
        "isGift": false,
        "isTransparency": true,
        "itemPrice": {
          "amount": 17.95,
          "currencyCode": "USD",
        },
        "itemTax": null,
        "orderItemId": "79039765272157",
        "pointsGranted": null,
        "priceDesignation": "BusinessPrice",
        "productInfo": null,
        "promotionDiscount": null,
        "promotionDiscountTax": null,
        "promotionIds": [
          "FREESHIP",
        ],
        "quantityOrdered": 2,
        "quantityShipped": null,
        "scheduledDeliveryEndDate": null,
        "scheduledDeliveryStartDate": null,
        "sellerSKU": "CBA_OTF_5",
        "serialNumberRequired": null,
        "shippingDiscount": null,
        "shippingDiscountTax": null,
        "shippingPrice": null,
        "shippingTax": null,
        "taxCollection": null,
        "title": "Example item name",
      },
    ],
  },
  "responseMetadata": {
    "requestId": "88faca76-b600-46d2-b53c-0c8c4533e43a",
  },
}
`;

exports[`lib.client.parsers.orders.list-order-items-response should parse the ListOrderItemsResponse example response from MWS doc 1`] = `
{
  "listOrderItemsResult": {
    "amazonOrderId": "058-1233752-8214740",
    "nextToken": "MRgZW55IGNhcm5hbCBwbGVhc3VyZS6=",
    "orderItems": [
      {
        "asin": "BT0093TELA",
        "buyerCustomizedInfo": {
          "customizedURL": "https://zme-caps.amazon.com/t/bR6qHkzSOxuB/J8nbWhze0Bd3DkajkOdY-XQbWkFralegp2sr_QZiKEE/1",
        },
        "codFee": {
          "amount": 10,
          "currencyCode": "JPY",
        },
        "codFeeDiscount": {
          "amount": 1,
          "currencyCode": "JPY",
        },
        "conditionId": null,
        "conditionNote": null,
        "conditionSubtypeId": null,
        "giftMessageText": "For you!",
        "giftWrapLevel": "Classic",
        "giftWrapPrice": {
          "amount": 1.99,
          "currencyCode": "JPY",
        },
        "giftWrapTax": null,
        "isGift": false,
        "isTransparency": true,
        "itemPrice": {
          "amount": 25.99,
          "currencyCode": "JPY",
        },
        "itemTax": null,
        "orderItemId": "68828574383266",
        "pointsGranted": {
          "pointsMonetaryValue": {
            "amount": 10,
            "currencyCode": "JPY",
          },
          "pointsNumber": 10,
        },
        "priceDesignation": "BusinessPrice",
        "productInfo": {
          "numberOfItems": 12,
        },
        "promotionDiscount": null,
        "promotionDiscountTax": null,
        "promotionIds": [],
        "quantityOrdered": 1,
        "quantityShipped": 1,
        "scheduledDeliveryEndDate": 2013-09-09T07:30:00.000Z,
        "scheduledDeliveryStartDate": Date { NaN },
        "sellerSKU": "CBA_OTF_1",
        "serialNumberRequired": null,
        "shippingDiscount": null,
        "shippingDiscountTax": null,
        "shippingPrice": {
          "amount": 1.26,
          "currencyCode": "JPY",
        },
        "shippingTax": null,
        "taxCollection": null,
        "title": "Example item name",
      },
      {
        "asin": "BCTU1104UEFB",
        "buyerCustomizedInfo": null,
        "codFee": null,
        "codFeeDiscount": null,
        "conditionId": "Used",
        "conditionNote": "Example ConditionNote",
        "conditionSubtypeId": "Mint",
        "giftMessageText": null,
        "giftWrapLevel": null,
        "giftWrapPrice": null,
        "giftWrapTax": null,
        "isGift": false,
        "isTransparency": false,
        "itemPrice": {
          "amount": 17.95,
          "currencyCode": "JPY",
        },
        "itemTax": null,
        "orderItemId": "79039765272157",
        "pointsGranted": null,
        "priceDesignation": "BusinessPrice",
        "productInfo": null,
        "promotionDiscount": null,
        "promotionDiscountTax": null,
        "promotionIds": [
          "FREESHIP",
        ],
        "quantityOrdered": 2,
        "quantityShipped": null,
        "scheduledDeliveryEndDate": null,
        "scheduledDeliveryStartDate": null,
        "sellerSKU": "CBA_OTF_5",
        "serialNumberRequired": null,
        "shippingDiscount": null,
        "shippingDiscountTax": null,
        "shippingPrice": null,
        "shippingTax": null,
        "taxCollection": {
          "model": "MarketplaceFacilitator",
          "responsibleParty": "Amazon Services, Inc.",
        },
        "title": "Example item name",
      },
    ],
  },
  "responseMetadata": {
    "requestId": "88faca76-b600-46d2-b53c-0c8c4533e43a",
  },
}
`;
